# solar-system-generator

./: README.md  pyproject.toml  pysolsys-env.yml
examples/: create_a_solar_system.ipynb
pysolsys/: __init__.py  planet.py  solarsystem.py  sun.py
pysolsys/utils/: checkpoint.py
